update gtk3 & i3 & sway & qutebrowser & vifm & tmux & zsh config

--- a/~/.config/gtk-3.0/gtk.css
+++ b/~/.config/gtk-3.0/gtk.css
@@ -7,3 +7,12 @@
 .titlebar {
 	border-radius: 0;
 }
+
+.header-bar {
+  background-image: none;
+  background-color: #ededed;
+  box-shadow: none;
+}
+GtkLabel.title {
+  opacity: 0;
+}
